--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-elastic",
+  "name": "angular-elastic-patched",
   "version": "2.3.1",
   "main": "elastic.js",
   "ignore": [
